Project

General

Profile

Actions

Bug #22676

closed

test_cls_rbd.sh failure during upgrade test

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

CommandFailedError: Command failed (workunit test cls/test_cls_rbd.sh) on smithi013 with status 1: 'mkdir p - /home/ubuntu/cephtest/mnt.0/client.0/tmp && cd -- /home/ubuntu/cephtest/mnt.0/client.0/tmp && CEPH_CLI_TEST_DUP_COMMAND=1 CEPH_REF=luminous TESTDIR="/home/ubuntu/cephtest" CEPH_ARGS="--cluster ceph" CEPH_ID="0" PATH=$PATH:/usr/sbin CEPH_BASE=/home/ubuntu/cephtest/clone.client.0 CEPH_ROOT=/home/ubuntu/cephtest/clone.client.0 adjust-ulimits ceph-coverage /home/ubuntu/cephtest/archive/coverage timeout 3h /home/ubuntu/cephtest/clone.client.0/qa/workunits/cls/test_cls_rbd.sh'

/a/sage-2018-01-12_22:50:05-rados-wip-sage3-testing-2018-01-12-1426-distro-basic-smithi/2065057

description: rados/upgrade/luminous-x-singleton/{0-cluster/{openstack.yaml start.yaml}
1-install/luminous.yaml 2-partial-upgrade/firsthalf.yaml 3-thrash/default.yaml 4-workload/{rbd-cls.yaml
rbd-import-export.yaml readwrite.yaml snaps-few-objects.yaml} 5-workload/{radosbench.yaml
rbd_api.yaml} 6-finish-upgrade.yaml 7-mimic.yaml 8-workload/{rbd-python.yaml rgw-swift.yaml
snaps-many-objects.yaml} thrashosds-health.yaml}

2018-01-13T05:33:12.168 INFO:tasks.workunit.client.0.smithi013.stdout:[ RUN      ] TestClsRbd.group_image_add
2018-01-13T05:33:12.168 INFO:tasks.workunit.client.0.smithi013.stdout:/build/ceph-12.2.2-78-g905b734/src/test/cls_rbd/test_cls_rbd.cc:2085: Failure
2018-01-13T05:33:12.169 INFO:tasks.workunit.client.0.smithi013.stdout:      Expected: 0
2018-01-13T05:33:12.169 INFO:tasks.workunit.client.0.smithi013.stdout:To be equal to: group_create(&ioctx, group_id)
2018-01-13T05:33:12.169 INFO:tasks.workunit.client.0.smithi013.stdout:      Which is: -95
2018-01-13T05:33:12.169 INFO:tasks.workunit.client.0.smithi013.stdout:[  FAILED  ] TestClsRbd.group_image_add (0 ms)
2018-01-13T05:33:12.172 INFO:tasks.workunit.client.0.smithi013.stdout:[ RUN      ] TestClsRbd.group_image_remove
2018-01-13T05:33:12.173 INFO:tasks.workunit.client.0.smithi013.stdout:/build/ceph-12.2.2-78-g905b734/src/test/cls_rbd/test_cls_rbd.cc:2097: Failure
2018-01-13T05:33:12.173 INFO:tasks.workunit.client.0.smithi013.stdout:      Expected: 0
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:To be equal to: group_create(&ioctx, group_id)
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:      Which is: -95
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:[  FAILED  ] TestClsRbd.group_image_remove (1 ms)
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:[ RUN      ] TestClsRbd.group_image_list
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:/build/ceph-12.2.2-78-g905b734/src/test/cls_rbd/test_cls_rbd.cc:2116: Failure
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:      Expected: 0
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:To be equal to: group_create(&ioctx, group_id)
2018-01-13T05:33:12.174 INFO:tasks.workunit.client.0.smithi013.stdout:      Which is: -95
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:[  FAILED  ] TestClsRbd.group_image_list (0 ms)
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:[ RUN      ] TestClsRbd.group_image_clean
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:/build/ceph-12.2.2-78-g905b734/src/test/cls_rbd/test_cls_rbd.cc:2142: Failure
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:      Expected: 0
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:To be equal to: group_create(&ioctx, group_id)
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:      Which is: -95
2018-01-13T05:33:12.175 INFO:tasks.workunit.client.0.smithi013.stdout:[  FAILED  ] TestClsRbd.group_image_clean (0 ms)

Related issues 1 (0 open1 closed)

Related to rbd - Bug #22740: "[ FAILED ] TestClsRbd.snapshots_namespaces" in upgrade:kraken-x-luminous-distro-basic-ovhResolved01/20/2018

Actions
Actions #1

Updated by Sage Weil over 6 years ago

  • Description updated (diff)
Actions #2

Updated by Jason Dillaman over 6 years ago

  • Status changed from 12 to In Progress
  • Release set to luminous
Actions #3

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Related to Bug #22740: "[ FAILED ] TestClsRbd.snapshots_namespaces" in upgrade:kraken-x-luminous-distro-basic-ovh added
Actions

Also available in: Atom PDF