cls/rbd: remove incompatible group features from partial implementation

Fixes: https://tracker.ceph.com/issues/22676
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit cadd8426b358647505e950017d9a146e6f7f6696)

Conflicts:
	src/cls/rbd/cls_rbd_types.h: trivial resolution
	src/test/cls_rbd/test_cls_rbd.cc: trivial resolution

Fixes: https://tracker.ceph.com/issues/22740